Add community voting feature: upvote players on Big Board
Features:
- New Community Score column with upvote button
- Toggle voting (click to add/remove vote)
- Rate limiting: 50 votes/hour per IP
- IP hashing for privacy
- Mobile responsive design
- 8 unit tests passing

Database:
- player_votes table with foreign keys
- Unique constraint prevents duplicate votes

UI:
- Green thumbs up button (highlighted when voted)
- Live vote counts
- Sortable Community column

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "worker:dev": "wrangler dev",
     "worker:deploy": "wrangler deploy",
     "db:migrate": "wrangler d1 migrations apply draftroom-db --local",
@@ -22,6 +24,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.0.0",
+    "vitest": "^1.0.0",
     "wrangler": "^3.22.0"
   }
 }
